deploy: 0a358d6e3679aad9a5eff98aafeea5f3db59856b

--- a/contribution-guideline/index.html
+++ b/contribution-guideline/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="../img/favicon.ico">
-        <title>Contribution guideline - My Docs</title>
+        <title>contrubition guideline - My Docs</title>
         <link href="../css/bootstrap.min.css" rel="stylesheet">
         <link href="../css/fontawesome.min.css" rel="stylesheet">
         <link href="../css/brands.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                                 <a href=".." class="nav-link">Welcom</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../install.md" class="nav-link">Install and run</a>
+                                <a href="../install-run/" class="nav-link">Install and run</a>
                             </li>
                             <li class="nav-item">
                                 <a href="../system-arch/" class="nav-link">System Arch</a>
@@ -57,7 +57,7 @@
                                 <a href="../models/" class="nav-link">Pydantic model</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../contrubition-guiline.md" class="nav-link">contrubition guideline</a>
+                                <a href="./" class="nav-link active" aria-current="page">contrubition guideline</a>
                             </li>
                         </ul>
 
@@ -67,6 +67,16 @@
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
+                            <li class="nav-item">
+                                <a rel="prev" href="../models/" class="nav-link">
+                                    <i class="fa fa-arrow-left"></i> Previous
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a rel="next" class="nav-link disabled">
+                                    Next <i class="fa fa-arrow-right"></i>
+                                </a>
+                            </li>
                     </ul>
                 </div>
             </div>
