--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
                                 <a href="/." class="nav-link">Welcom</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/install.md" class="nav-link">Install and run</a>
+                                <a href="/install-run/" class="nav-link">Install and run</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/system-arch/" class="nav-link">System Arch</a>
@@ -57,7 +57,7 @@
                                 <a href="/models/" class="nav-link">Pydantic model</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/contrubition-guiline.md" class="nav-link">contrubition guideline</a>
+                                <a href="/contribution-guideline/" class="nav-link">contrubition guideline</a>
                             </li>
                         </ul>
 
