--- a/system-arch/index.html
+++ b/system-arch/index.html
@@ -39,7 +39,7 @@
                                 <a href=".." class="nav-link">Welcom</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../install.md" class="nav-link">Install and run</a>
+                                <a href="../install-run/" class="nav-link">Install and run</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./" class="nav-link active" aria-current="page">System Arch</a>
@@ -57,7 +57,7 @@
                                 <a href="../models/" class="nav-link">Pydantic model</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../contrubition-guiline.md" class="nav-link">contrubition guideline</a>
+                                <a href="../contribution-guideline/" class="nav-link">contrubition guideline</a>
                             </li>
                         </ul>
 
@@ -68,7 +68,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a rel="prev" href=".." class="nav-link">
+                                <a rel="prev" href="../install-run/" class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
